--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Lucas Larsson",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "formidable": "^1.1.1"
   }
 }
